--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=Glog-prototype
+
+
+spring.datasource.url=jdbc:mysql://geport.mysql.database.azure.com/geport
+
+spring.datasource.username=geport
+spring.datasource.password=!!aA04180303a!!
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.hibernate.ddl-auto= update
+
+
