--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    //runtimeOnly 'com.h2database:h2'
+    runtimeOnly 'com.h2database:h2'
     runtimeOnly 'com.mysql:mysql-connector-j'
 
     annotationProcessor 'org.projectlombok:lombok'
@@ -48,6 +48,15 @@ dependencies {
 
     //Swagger 설치
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+
+    //spring JWT
+    implementation 'com.auth0:java-jwt:4.2.1'
+
+    //spring oauth2
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
+    //spring security
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 
 }
 
