--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,10 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-!**/src/main/resources/application-jwt.yml
-!**/src/main/resources/application-oauth.yml
-!**/src/main/resources/*.properties
+#ignore yml files
+**/src/main/resources/application-jwt.yml
+**/src/main/resources/application-oauth.yml
+**/src/main/resources/*.properties
 ### STS ###
 .apt_generated
 .classpath
