--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,9 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 #ignore yml files
-**/src/main/resources/application-jwt.yml
-**/src/main/resources/application-oauth.yml
-**/src/main/resources/*.properties
+src/main/resources/application-jwt.yml
+src/main/resources/application-oauth.yml
+src/main/resources/*.properties
 ### STS ###
 .apt_generated
 .classpath
