[update] local에서 signup가능

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ build/
 #ignore yml files
 src/main/resources/application-jwt.yml
 src/main/resources/application-oauth.yml
+src/main/resources/application-db.yml
+src/main/resources/application.yml
+src/main/resources/application-swagger.yml
 src/main/resources/*.properties
 ### STS ###
 .apt_generated
