--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,12 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+.env
 #ignore yml files
 src/main/resources/application-jwt.yml
 src/main/resources/application-oauth.yml
 src/main/resources/application-db.yml
 src/main/resources/application.yml
-src/main/resources/application-swagger.yml
 src/main/resources/*.properties
 ### STS ###
 .apt_generated
