--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext{
+    ext {
         queryDslVersion = "5.0.0"
     }
 }
@@ -8,9 +8,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.2.4'
     id 'io.spring.dependency-management' version '1.1.4'
-
 }
-
 
 group = 'go'
 version = '0.0.1-SNAPSHOT'
@@ -40,47 +38,54 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-    //querydsl 설정 추가
-    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
-    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
+    // QueryDSL 설정 추가
+    implementation "com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"
+    annotationProcessor "com.querydsl:querydsl-apt:${queryDslVersion}:jakarta"
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
-    //Swagger 설치
+    // Swagger 설치
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 
-    //spring JWT
+    // Spring JWT
     implementation 'com.auth0:java-jwt:4.2.1'
 
-    //spring oauth2
+    // Spring OAuth2
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
-    //spring security
+    // Spring Security
     implementation 'org.springframework.boot:spring-boot-starter-security'
-
-
 }
-
-
 
 tasks.named('test') {
     useJUnitPlatform()
 }
 
-// Querydsl 설정부
-def generated = 'src/main/generated'
+// QueryDSL 설정부
+def generated = 'src/main/generated/java'
 
-// querydsl QClass 파일 생성 위치를 지정
+// QueryDSL QClass 파일 생성 위치를 지정
 tasks.withType(JavaCompile) {
-    options.getGeneratedSourceOutputDirectory().set(file(generated))
+    options.annotationProcessorGeneratedSourcesDirectory = file(generated)
 }
 
-// java source set 에 querydsl QClass 위치 추가
+// Java source set에 QueryDSL QClass 위치 추가
 sourceSets {
-    main.java.srcDirs += [ generated ]
+    main {
+        java {
+            srcDirs += [generated]
+        }
+    }
 }
 
-// gradle clean 시에 QClass 디렉토리 삭제
+// Gradle clean 시에 QClass 디렉토리 삭제
 clean {
-    delete file(generated)
+    delete fileTree(dir: generated, include: '**/*.java')
 }
+
+// 생성된 Q 클래스가 중복되지 않도록 사전 삭제 작업 추가
+task deleteGeneratedQClasses(type: Delete) {
+    delete fileTree(dir: generated, include: '**/Q*.java')
+}
+
+compileJava.dependsOn deleteGeneratedQClasses
