--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ dependencies {
 
     //Swagger 설치
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
-    implementation 'org.springdoc:springdoc-openapi-ui:1.5.7'
+    // implementation 'org.springdoc:springdoc-openapi-ui:1.5.7'
 
     //spring JWT
     implementation 'com.auth0:java-jwt:4.2.1'
